--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        
 
 
-      <h4 class="card-text" style="color: rgb(24, 226, 24);">[ Android Developer, Web Designer ]</h4>
+      <h4 class="card-text" style="color: rgb(24, 226, 24);">[Web Developer ]</h4>
 
       <div>
 
